--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "dreamflux-backend",
+  "name": "nodejs",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1"
+    "@types/node": "^22.13.11",
+    "axios": "^1.9.0"
   }
 }
