--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "nodejs",
+  "name": "dreamflux-railway-backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^22.13.11",
-    "axios": "^1.9.0"
+    "axios": "^1.9.0",
+    "express": "^4.18.2"
   }
 }
