--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.9.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   }
 }
